--- a/user/updateinfo.html
+++ b/user/updateinfo.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		 <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
-		<title>Laptop_MSI</title>
+		<title>Cập nhật thông tin</title>
 
  		<!-- Google font -->
  		<link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700" rel="stylesheet">
@@ -211,28 +211,36 @@
 							<h3 class="aside-title">Tài khoản</h3>
 							<div class="checkbox-filter">
 								<div class="input-checkbox">		
-									<label for="brand-1">
+									<a href="">
+										<label for="brand-1">
 										<span></span>
 										Cập nhật thông tin cá nhân
 									</label>
+									</a>
 								</div>
 								<div class="input-checkbox">
-									<label for="brand-1">
+									<a href="">
+										<label for="brand-1">
 										<span></span>
 										Giỏ hàng
 									</label>
+									</a>
 								</div>
 								<div class="input-checkbox">
-									<label for="brand-1">
+									<a href="">
+										<label for="brand-1">
 										<span></span>
 										Thanh toán
 									</label>
+									</a>
 								</div>
 								<div class="input-checkbox">
-									<label for="brand-1">
+									<a href="">
+										<label for="brand-1">
 										<span></span>
 										Lịch sử mua hàng
 									</label>
+									</a>
 								</div>
 							</div>
 						</div>
@@ -271,15 +279,8 @@
 							</div>
 							<div class="form-group">
 								<div class="input-checkbox">
-									<input type="checkbox" id="create-account">
-									<label for="create-account">
-										<span></span>
-										Create Account?
-									</label>
-									<div class="caption">
-										<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt.</p>
-										<input class="input" type="password" name="password" placeholder="Enter Your Password">
-									</div>
+									<a href="#" class="primary-btn order-submit">Cập nhật</a>
+									
 								</div>
 							</div>
 						</div>
