--- a/detail/asus/Asus S510UA-BQ111T.html
+++ b/detail/asus/Asus S510UA-BQ111T.html
@@ -6,7 +6,7 @@
 		 <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
 		<title>Laptop ASUS S510UA-BQ111T (I3-7100U) (Vàng đồng)</title>
-
+		<link rel="icon" href="../../img/ico_logo.ico" type="image/x-icon">
  		<!-- Google font -->
  		<link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700" rel="stylesheet">
 
