--- a/detail/asus/Asus UX430UN-GV097T.html
+++ b/detail/asus/Asus UX430UN-GV097T.html
@@ -6,6 +6,7 @@
 		 <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
 		<title>Laptop ASUS UX430UN-GV097T (I7-8550U) (Xanh)</title>
+		<link rel="icon" href="../../img/ico_logo.ico" type="image/x-icon">
 
  		<!-- Google font -->
  		<link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700" rel="stylesheet">
