--- a/type/Laptop_DoanhNhan.html
+++ b/type/Laptop_DoanhNhan.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		 <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 		<link rel="icon" href="../img/logo.png" type="image/png" sizes="8x8">
-		<title>Laptop</title>
+		<title>Laptop_DoanhNhan</title>
 
  		<!-- Google font -->
  		<link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700" rel="stylesheet">
