--- a/detail/dell/Dell Inspiron 14 3467-M20NR21.html
+++ b/detail/dell/Dell Inspiron 14 3467-M20NR21.html
@@ -6,7 +6,7 @@
 		 <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
 		<title>Laptop DELL INSPIRON 14 3467-M20NR21</title>
-
+		<link rel="icon" href="../../img/ico_logo.ico" type="image/x-icon">
  		<!-- Google font -->
  		<link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700" rel="stylesheet">
 
