--- a/detail/dell/Dell Inspiron 14 5468-K5CDP1.html
+++ b/detail/dell/Dell Inspiron 14 5468-K5CDP1.html
@@ -6,6 +6,7 @@
 		 <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
 		<title>Laptop DELL INSPIRON 14 5468-K5CDP1</title>
+		<link rel="icon" href="../../img/ico_logo.ico" type="image/x-icon">
 
  		<!-- Google font -->
  		<link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700" rel="stylesheet">
